responsive home page pass 1

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,7 +1,7 @@
-body {
-	background:url(../images/header-bg.png) 150% 40px #eeeeee;
-	background-repeat:no-repeat;
-}
+// body {
+// 	background:url(../images/header-bg.png) 150% 40px #eeeeee;
+// 	background-repeat:no-repeat;
+// }
 
 
 
