--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -1009,5 +1009,6 @@ $topbar-margin-bottom: 0;
 // Transitions and breakpoint styles
 // $topbar-transition-speed: 300ms;
 // $topbar-breakpoint: emCalc(940px); // Change to 9999px for always mobile layout
+$topbar-breakpoint: emCalc(768px); // Change to 9999px for always mobile layout
 // $topbar-media-query: "only screen and (min-width "#{$topbar-breakpoint}")";
 
