--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -3576,7 +3576,7 @@ form.custom .custom.disabled {
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/zurb-foundation-4\.0\.8\/scss\/foundation\/components\/_top-bar\.scss}line{font-family:\00003314}}
 .top-bar-js-breakpoint {
-  width: 58.75em !important;
+  width: 48em !important;
   visibility: hidden;
 }
 
@@ -3585,7 +3585,7 @@ form.custom .custom.disabled {
   display: block;
 }
 
-@media only screen and (min-width: 58.75em) {
+@media only screen and (min-width: 48em) {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/Ruby\/Gems\/1\.8\/gems\/zurb-foundation-4\.0\.8\/scss\/foundation\/components\/_top-bar\.scss}line{font-family:\00003323}}
   .top-bar {
     background: #353535;
@@ -5467,12 +5467,6 @@ table tfoot tr td {
   max-width: 800px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_base\.scss}line{font-family:\000031}}
-body {
-  background: url(../images/header-bg.png) 150% 40px #eeeeee;
-  background-repeat: no-repeat;
-}
-
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_base\.scss}line{font-family:\000038}}
 .btn {
   border-style: solid;
@@ -5527,35 +5521,44 @@ body {
 /*
 Layout rules divide the page into sections. Layouts hold one or more modules together.
 */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000312}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\000036}}
 .top-bar-container {
   background: #353535;
   border-bottom: 5px solid #c0d23e;
   margin-bottom: 0.625em;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000318}}
-.green-bar {
-  background: #c0d23e;
-  height: 5px;
-  clear: both;
-}
-
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000324}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000314}}
 #slider {
   background: #000;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000328}}
-section.main {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000318}}
+#main {
   position: relative;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000333}}
-section.main .content {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000323}}
+#main .content {
   background: url(../images/bg.png);
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000340}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000330}}
+.l-feature-box {
+  background: #fff;
+  -webkit-box-shadow: 0px 0px 5px rgba(53, 53, 53, 0.7);
+  -moz-box-shadow: 0px 0px 5px rgba(53, 53, 53, 0.7);
+  box-shadow: 0px 0px 5px rgba(53, 53, 53, 0.7);
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000334}}
+.l-feature-box p {
+  padding: 10px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000338}}
+.l-feature-box .feature-image {
+  width: 100%;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000347}}
 #footer {
   min-height: 200px;
   background: #353535;
@@ -5564,24 +5567,24 @@ section.main .content {
   color: #fff;
   padding: 20px 0 0 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000349}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000356}}
 #footer a {
   color: #fff;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000353}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000360}}
 #footer .footer-nav {
   padding: 0;
   margin: 0;
   list-style: none;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000358}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000365}}
 #footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6 {
   font-family: Georgia,serif;
   color: #c0d23e;
   font-weight: normal;
   text-transform: uppercase;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000364}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000371}}
 #footer .social {
   margin: 0;
   padding: 0;
@@ -5620,7 +5623,7 @@ section.main .content {
 #footer .social li.last {
   padding-right: 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000367}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_layout\.scss}line{font-family:\0000374}}
 #footer .social a {
   color: #a82743;
   font-size: 30px;
@@ -5634,41 +5637,41 @@ Modules are the reusable, modular parts of our design. They are the callouts, th
   font-size: 23px;
   line-height: 32px;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000314}}
+.top-bar .name img {
+  width: 30px;
+  padding-top: 1px;
+}
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000315}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000320}}
 .logo-area {
   position: relative;
   bottom: -15px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000320}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000325}}
 .logo-area .logo {
-  text-indent: -119988px;
-  overflow: hidden;
-  text-align: left;
-  background-image: url('../images/logo.svg?1379927524');
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background: url("../images/logo.svg") no-repeat;
   height: 120px;
   width: 120px;
   background-size: contain;
   margin: 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000328}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000332}}
 .logo-area .logo a {
   display: block;
   height: 100%;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000334}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000338}}
 .logo-area .logo-text {
   font-family: Georgia,serif;
   font-weight: normal;
   margin: 0 0.3125em 0 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000341}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000345}}
 .logo-area .logo, .logo-area .logo-text {
   display: inline-block;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000345}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000349}}
 .logo-area .slogan {
   font-size: 1.25em;
 }
@@ -5676,7 +5679,7 @@ Modules are the reusable, modular parts of our design. They are the callouts, th
 /*
  navigation
 */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000354}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000358}}
 .nav-container {
   background: #e15e32;
   position: relative;
@@ -5684,7 +5687,7 @@ Modules are the reusable, modular parts of our design. They are the callouts, th
   z-index: 1000;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000361}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000365}}
 ul.nav {
   margin: 0;
   padding: 0;
@@ -5725,38 +5728,56 @@ ul.nav li:last-child {
 ul.nav li.last {
   padding-right: 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000368}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000371}}
+ul.nav li {
+  height: 100%;
+  border-right: 1px solid #1C1C1C;
+  border-left: 1px solid #4F4F4F;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000377}}
+ul.nav li:first-child {
+  border-right: none;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000381}}
+ul.nav li:last-child {
+  border-right: none;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000385}}
+ul.nav li:hover {
+  background: #2B2B2B;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000389}}
 ul.nav li a {
   color: #fff;
   display: block;
   padding-top: 3px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000375}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000397}}
 ul.nav li:first-child a {
   padding-left: 20px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000380}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\00003102}}
 ul.nav li.active {
   border-bottom: 5px solid #a82743;
   height: 36px;
 }
 
 /*orbit overrites */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000392}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\00003114}}
 .orbit-container .orbit-slides-container li {
   text-align: center;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\0000395}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\00003117}}
 .orbit-container .orbit-slides-container li img {
   display: inline;
   visibility: hidden;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\00003101}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\00003123}}
 .orbit-container .orbit-slides-container li.slider-img-1 {
   background: url(../images/banner1.png);
   background-size: cover;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\00003106}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\00003128}}
 .orbit-container .orbit-slides-container li .caption-text {
   font-size: 2em;
   margin: 0 0.625em 0 0;
@@ -5764,7 +5785,7 @@ ul.nav li.active {
   vertical-align: middle;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\00003117}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\00003139}}
 .orbit-bullets {
   display: none;
 }
@@ -5772,21 +5793,53 @@ ul.nav li.active {
 /* 
 reusable components 
 */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\00003127}}
-.feature-box {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\00003149}}
+.l-feature-box {
   background: #fff;
   -webkit-box-shadow: 0px 0px 5px rgba(53, 53, 53, 0.7);
   -moz-box-shadow: 0px 0px 5px rgba(53, 53, 53, 0.7);
   box-shadow: 0px 0px 5px rgba(53, 53, 53, 0.7);
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\00003131}}
-.feature-box p {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_modules\.scss}line{font-family:\00003153}}
+.l-feature-box p {
   padding: 10px;
 }
 
 /*
 State rules are ways to describe how our modules or layouts will look when in a particular state. Is it hidden or expanded? Is it active or inactive? They are about describing how a module or layout looks on screens that are smaller or bigger. They are also about describing how a module might look in different views like the home page or the inside page.
 */
+@media only screen and (max-width: 767px) {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_states\.scss}line{font-family:\000038}}
+  ul.nav {
+    height: auto;
+  }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_states\.scss}line{font-family:\0000312}}
+  ul.nav li {
+    float: none;
+    display: block;
+    width: 100%;
+    border-right: 0;
+    border-left: 0;
+    padding: 0;
+  }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_states\.scss}line{font-family:\0000320}}
+  ul.nav li.active {
+    height: auto;
+    border-bottom: 0;
+    background: #a82743;
+  }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_states\.scss}line{font-family:\0000328}}
+  ul.nav li a, ul.nav li:first-child a {
+    padding: 0.75em 0 0.75em 0.72917em;
+  }
+}
+@media only screen and (min-width: 768px) {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ericl\/Desktop\/projects\/missionspeed\/mission\/sass\/_states\.scss}line{font-family:\0000338}}
+  body {
+    background: url(../images/header-bg.png) 150% 40px #eeeeee;
+    background-repeat: no-repeat;
+  }
+}
 /* font-face */
 @font-face {
   font-family: "SocialFoundicons";
